added promotion section and started reviews section

--- a/index.html
+++ b/index.html
@@ -54,7 +54,106 @@
           Что такое <span class="what-is__title--colored">EVA</span> коврики?
         </h2>
       </section>
-      <section class="promotion"></section>
+      <section class="presentation">
+        <ul class="presentation__cards">
+          <li class="presentation__card">
+            <img
+              class="presentation__img"
+              src="images/material.jpg"
+              alt="material of mats"
+            />
+            <div class="presentation__card-info">
+              <h3 class="presentation__card-title">МАТЕРИАЛ</h3>
+              <p class="presentation__card-description">
+                Коврики EVA всесезонные и отличаются уникальной поверхностью
+                материала с ячейками ромбовидной формы. Из-за чего вода не
+                проливается при изъятии ковра и не плещется при езде. Коврики
+                воду не пропускают.
+              </p>
+            </div>
+          </li>
+          <li class="presentation__card">
+            <img
+              class="presentation__img"
+              src="images/difference.jpg"
+              alt="structure of mats"
+            />
+            <div class="presentation__card-info">
+              <h3 class="presentation__card-title">ОТЛИЧИЯ</h3>
+              <p class="presentation__card-description">
+                Резиновые коврики загибаются и лезут на педали. EVA коврики
+                такого не допустят! Специальные липучки держат его в одном
+                положении. При желании, для водителя устанавливается подпятник
+                из рельефного алюминия.
+              </p>
+            </div>
+          </li>
+          <li class="presentation__card">
+            <img
+              class="presentation__img"
+              src="images/colors.jpg"
+              alt="colors of mats"
+            />
+            <div class="presentation__card-info">
+              <h3 class="presentation__card-title">РАСЦВЕТКА</h3>
+              <p class="presentation__card-description">
+                Автомобильные коврики EVA можно заказать и в индивидуальных
+                размерах и в разных цветах, которые комбинируется на выбор
+                покупателя с такими же цветами окантовочной полипропиленовой
+                ременной ленты.
+              </p>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <section class="reviews">
+        <ul class="reviews__list">
+          <li class="reviews__item">
+            <img
+              src="images/reviewer-1.jpg"
+              alt="reviewer foto"
+              class="review__img"
+            />
+            <p class="review__text">
+              Коврики супер!!! Качество на высшем уровне!!! Удачи и побольше
+              заказов вам!!! Большое спасибо!
+            </p>
+            <svg
+              class="review__line"
+              width="130"
+              height="2"
+              viewBox="0 0 130 2"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <line
+                x1="1"
+                y1="1"
+                x2="129"
+                y2="1"
+                stroke="url(#paint0_linear_132_482)"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <defs>
+                <linearGradient
+                  id="paint0_linear_132_482"
+                  x1="9.99997"
+                  y1="-15.4999"
+                  x2="114"
+                  y2="18"
+                  gradientUnits="userSpaceOnUse"
+                >
+                  <stop stop-color="#D4145A" />
+                  <stop offset="1" stop-color="#3D5BF5" />
+                </linearGradient>
+              </defs>
+            </svg>
+            <span class="review__reviewer-name">Константин В.</span>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
