adapted intro and presentation sections for tablet

--- a/index.html
+++ b/index.html
@@ -95,11 +95,25 @@
       <section class="presentation">
         <ul class="presentation__cards">
           <li class="presentation__card">
-            <img
-              class="presentation__img"
-              src="images/material.jpg"
-              alt="material of mats"
-            />
+            <picture>
+              <source
+                srcset="./images/presentation/material.jpg"
+                media="(max-width: 767px)"
+              />
+              <source
+                srcset="./images/presentation/material-tab.jpg"
+                media="(max-width: 1439px)"
+              />
+              <source
+                srcset="./images/presentation/material-desk.jpg"
+                media="(max-width: 1800px)"
+              />
+              <img
+                class="presentation__img"
+                src="/images/presentation/material.jpg"
+                alt="mat's material"
+              />
+            </picture>
             <div class="presentation__card-info">
               <h3 class="presentation__card-title">МАТЕРИАЛ</h3>
               <p class="presentation__card-description">
@@ -111,11 +125,25 @@
             </div>
           </li>
           <li class="presentation__card">
-            <img
-              class="presentation__img"
-              src="images/difference.jpg"
-              alt="structure of mats"
-            />
+            <picture>
+              <source
+                srcset="./images/presentation/difference.jpg"
+                media="(max-width: 767px)"
+              />
+              <source
+                srcset="./images/presentation/differ-tab.jpg"
+                media="(max-width: 1439px)"
+              />
+              <source
+                srcset="./images/presentation/differ-desk.jpg"
+                media="(max-width: 1800px)"
+              />
+              <img
+                class="presentation__img"
+                src="/images/presentation/difference.jpg"
+                alt="mat's benefits"
+              />
+            </picture>
             <div class="presentation__card-info">
               <h3 class="presentation__card-title">ОТЛИЧИЯ</h3>
               <p class="presentation__card-description">
@@ -127,11 +155,25 @@
             </div>
           </li>
           <li class="presentation__card">
-            <img
-              class="presentation__img"
-              src="images/colors.jpg"
-              alt="colors of mats"
-            />
+            <picture>
+              <source
+                srcset="./images/presentation/colors.jpg"
+                media="(max-width: 767px)"
+              />
+              <source
+                srcset="./images/presentation/colors-tab.jpg"
+                media="(max-width: 1439px)"
+              />
+              <source
+                srcset="./images/presentation/colors-desk.jpg"
+                media="(max-width: 1800px)"
+              />
+              <img
+                class="presentation__img"
+                src="/images/presentation/colors.jpg"
+                alt="mat's colors"
+              />
+            </picture>
             <div class="presentation__card-info">
               <h3 class="presentation__card-title">РАСЦВЕТКА</h3>
               <p class="presentation__card-description">
