started to adapte desktop

--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
     <main class="main">
       <section class="intro">
         <div class="intro__inner">
+          <img class="intro__background" src="/images/tablet-back.svg" alt="" />
+          <img
+            class="intro__background-figures"
+            src="images/tablet-figures.svg"
+            alt="figures in shape of mats"
+          />
           <div class="logo">
             <svg
               class="logo-pic"
