--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </picture>
           <img
             class="intro__background-figures"
-            src="images/tablet-figures.svg"
+            src="images/tablet-figures.png"
             alt="figures in shape of mats"
           />
           <header class="intro__header">
