changed path images intro

--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
         <div class="intro__inner">
           <picture class="intro__background">
             <source
-              srcset="/images/back-tablet.svg"
+              srcset="images/back-tablet.svg"
               media="(max-width: 1439px)"
             />
             <source
-              srcset="/images/back-desktop.svg"
+              srcset="images/back-desktop.svg"
               media="(max-width: 1800px)"
             />
             <img
               class="intro__background"
-              src="/images/back-tablet.svg"
+              src="images/back-tablet.svg"
               alt="background with geometric figures"
             />
           </picture>
