--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             alt="figures in shape of mats"
           />
           <header class="intro__header">
-            <div class="logo">
+            <a href="#" class="logo">
               <svg
                 class="logo-pic"
                 width="60"
@@ -101,7 +101,7 @@
                 </defs>
               </svg>
               <span class="logo-text">EVARUGS</span>
-            </div>
+            </a>
             <nav class="nav__ancors">
               <ul class="ancors__list">
                 <li class="ancors__item">
