--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <div class="intro__inner-wrapper">
             <h1 class="intro__title">Инновационные коврики для автомобиля</h1>
             <span class="intro__subtitle">в вашем городе</span>
-            <button type="button" class="intro__button">ЗАКАЗАТЬ</button>
+            <button type="button" class="intro__button button">ЗАКАЗАТЬ</button>
             <h2 class="what-is__title" id="what-is-this">
               Что такое
               <span class="what-is__title--colored">EVA</span> коврики?
@@ -726,6 +726,61 @@
         </div>
       </div>
     </footer>
+    <div class="modal-container modal-container-close">
+      <div class="modal modal__application">
+        <button class="modal__close-button">
+          <span class="visually-hidden">Закрыть</span>
+        </button>
+        <section class="modal__content">
+          <h2 class="modal__title">ФОРМА ЗАЯВКИ</h2>
+          <form action="#" class="application-form" method="post">
+            <div class="application-form__upper-fields">
+              <p class="application-form__field-group">
+                <label for="application-name" class="visually-hidden"
+                  >Имя</label
+                >
+                <input
+                  class="application-form__field"
+                  type="text"
+                  name="application-name"
+                  id="application-name"
+                  placeholder="Ваше имя"
+                />
+              </p>
+              <p class="application-form__field-group">
+                <label for="application-mail" class="visually-hidden"
+                  >Емэйл</label
+                >
+                <input
+                  class="application-form__field"
+                  type="email"
+                  name="application-mail"
+                  id="application-mail"
+                  placeholder="Ваш e-mail"
+                />
+              </p>
+            </div>
+            <p class="application-form__field-group field-group__message">
+              <label for="application-order" class="visually-hidden"
+                >Заказ</label
+              >
+              <textarea
+                class="application-form__field"
+                type="text"
+                name="application-order"
+                id="application-order"
+                placeholder="Ваше сообщение (марка автомобиля, цвет ковриков, номер телефона)"
+              ></textarea>
+            </p>
+            <div class="button-wrapper">
+              <button class="button modal__button" type="submit">
+                отправить
+              </button>
+            </div>
+          </form>
+        </section>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
